// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbContainer renders a driver site correctly with intermediate breadcrumb and with project parents 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  text-wrap: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
  vertical-align: middle;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus {
  text-decoration-color: #016BF8;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/languages"
        target="_self"
      >
        <span>
          Languages
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/languages/csharp/"
        target="_self"
      >
        <span>
          C#/.NET
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/languages/csharp/csharp-driver/"
        target="_self"
      >
        <span>
          C#/.NET Driver
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/languages/csharp/csharp-driver/usage-examples/"
        target="_self"
      >
        <span>
          Usage Examples
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly as a docs homepage 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  text-wrap: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
  vertical-align: middle;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus {
  text-decoration-color: #016BF8;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-6 {
  overflow: hidden;
  text-wrap: nowrap;
  text-overflow: ellipsis;
}

.emotion-6:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-6:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-6"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/atlas/device-sdks/"
        target="_self"
      >
        <span>
          MongoDB Atlas Device SDKs
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href=""
      >
        <span>
          Atlas Device SDK for C++
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href=""
      >
        <span>
          Application Services - C++ SDK
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly with intermediate breadcrumb, no project parents 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  text-wrap: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
  vertical-align: middle;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus {
  text-decoration-color: #016BF8;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-10 {
  overflow: hidden;
  text-wrap: nowrap;
  text-overflow: ellipsis;
}

.emotion-10:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-10:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/atlas/"
        target="_self"
      >
        <span>
          MongoDB Atlas
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-10"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/atlas/device-sdks/"
        target="_self"
      >
        <span>
          MongoDB Atlas Device SDKs
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly with no intermediate breadcrumbs, has project parents 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  text-wrap: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  font-size: 13px;
  vertical-align: middle;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus {
  text-decoration-color: #016BF8;
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-6 {
  overflow: hidden;
  text-wrap: nowrap;
  text-overflow: ellipsis;
}

.emotion-6:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-6:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-6"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href="https://www.mongodb.com/docs/atlas/device-sdks/"
        target="_self"
      >
        <span>
          MongoDB Atlas Device SDKs
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href=""
      >
        <span>
          Atlas Device SDK for C++
        </span>
      </a>
    </div>
    <span
      class="emotion-4 emotion-5"
    >
       / 
    </span>
    <div
      class="emotion-2"
    >
      <a
        class="lg-ui-0001 emotion-3"
        href=""
      >
        <span>
          Application Services - C++ SDK
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
